# automated-prompt-refiner

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: classifier.py  evaluator.py  optimiser.py
data/: prepare_reviews.py
data_legal/: generate.py
prompts/: store.py
results/: prompts.json  winning_prompt.json
